# RealtimeTranslate

./: .gitignore  README.md  pyproject.toml  technical-spec.md
config/: app.example.yaml
extension/: content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js  settings.js  subtitle.css
realtime_translate/: api.py  asr.py  cli.py  config.py  db.py  normalization.py  pipeline.py  schemas.py  subtitles.py  translation.py  youtube.py
tests/: test_subtitles.py  test_translation_resume.py
web/: app.js  index.html  styles.css
