[project]
name = "realtime-translate"
version = "0.1.0"
description = "Local-first YouTube subtitle transcription and translation system"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "yt-dlp>=2024.5.27",
  "faster-whisper>=1.0.3",
  "httpx>=0.27",
  "websockets>=12.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["realtime_translate*"]
